--- a/app/src/main/res/layout/activity_profiles.xml
+++ b/app/src/main/res/layout/activity_profiles.xml
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/backToMainActivity"
         android:layout_width="77dp"
         android:layout_height="44dp"
         android:layout_marginStart="6dp"
