--- a/app/src/main/res/layout/activity_plant1.xml
+++ b/app/src/main/res/layout/activity_plant1.xml
@@ -7,7 +7,7 @@
     tools:context=".Plant1Activity">
 
     <Button
-        android:id="@+id/backToProfiles"
+        android:id="@+id/backToProfiles1"
         android:layout_width="77dp"
         android:layout_height="44dp"
         android:layout_marginTop="3dp"
