--- a/app/src/main/res/layout/activity_plant3.xml
+++ b/app/src/main/res/layout/activity_plant3.xml
@@ -38,4 +38,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinner3"
+        android:layout_width="416dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="175dp"
+        android:layout_marginBottom="408dp"
+        android:gravity="center|fill"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
