--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:layout_marginEnd="73dp"
         android:layout_marginRight="73dp"
         android:layout_marginBottom="404dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10"
@@ -50,6 +51,7 @@
         android:layout_marginEnd="73dp"
         android:layout_marginRight="73dp"
         android:layout_marginBottom="360dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView11"
@@ -65,6 +67,7 @@
         android:layout_marginEnd="73dp"
         android:layout_marginRight="73dp"
         android:layout_marginBottom="314dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView12"
